examples/test/testpolicy8826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8826
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key41: value13
      key39: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value11
          key11: value19
          key32: value38
      podSelector:
        matchLabels:
          key10: value12
          key42: value45
